fix wrap

--- a/client/styles/dashboard.styl
+++ b/client/styles/dashboard.styl
@@ -126,13 +126,12 @@
 	min-height: button-size * 0.8
 	flex-basis: button-size * 0.8
 	padding: button-size * 0.2
-	font-size: 2em
+	font-size: 1.5em
 
 	@media (max-width: query--small)
 		min-height: button-size--small * 0.8
 		flex-basis: button-size--small * 0.8
 		padding: button-size--small * 0.2
-		font-size: 1.5em
 
 	box-shadow: inset 0px -1px 0px rgba(0,0,0,0.1) 
 	display: flex
